<resources>
    <string name="app_name">QuickConnect</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
    <string name="go_to_sms">Go To SMS</string>
    <string name="change_language">Change Language</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="user_type">User Type</string>
    <string name="add_user">Register</string>
    <string name="intent">intent</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="call">call</string>
    <string name="Logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="Home">home</string>
    <string name="username">Username</string>
    <string name="quickconnect">QuickConnect</string>
    <string name="job_role">Job Role</string>
    <string name="message">message</string>
    <string name="end_chat">End Chat</string>
    <string name="view_customer_s_information">View Customer\'s Information</string>
    <string name="user_information">user_information</string>
    <string name="username_profile">username_profile</string>
    <string name="about">about</string>
    <string name="email_address">email_address</string>
    <string name="transaction_history">Transaction_History</string>
    <string name="profile_account_type">profile_account_type</string>
    <string name="customer_preferences">customer_preferences</string>
    <string name="profile_mobile_bank_info">profile_mobile_bank_info</string>
    <string name="_21">21</string>
    <string name="profile_edit_account">profile_edit_account</string>
    <string name="profile_refereal_information">profile_refereal_information</string>
    <string name="profile_cards">profile_cards</string>
    <string name="profile_other">profile_other</string>
    <string name="profile_mobile_number">profile_mobile_number</string>
    <string name="profile_customer_preference">Profile_Customer_preference</string>
    <string name="previous_queries">previous_queries</string>
    <string name="title_activity_customer_waiting_call">Customer_WaitingCall_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register_as_employee">Register as Employee</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_conference_app">Video meeting Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="your_example_com">123@gmail.com</string>
    <string name="password_hint">password hint</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Dont have an account ?</string>
    <string name="sign_up">sign up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">we need a few details to get your account ready</string>
    <string name="first_name_hint">first name hint</string>
    <string name="last_name_hint">last name hint</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="sign_out">Sign Out\n</string>
    <string name="incoming_meeting_invitation">incoming meeting invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation\n</string>
    <string name="email_edt">Email</string>
    <string name="password_edt">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_txt">Register</string>
    <string name="confirm_password_edt">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="user_name_edt">Username</string>
    <string name="video_call">Video Call</string>
    <string name="tap_mic_and_speek">tap microphone and speak\n</string>
    <string name="hello">HELLO</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="voice_video_call">Voice/Video Call</string>
    <string name="messaging">Chats and Requests</string>
    <string name="qc_chatbot">QC ChatBot</string>
    <string name="quickconnect_dashboard">QuickConnect Dashboard</string>
    <string name="queue_number_10">Queue Number: 10</string>
    <string name="steps_to_take">Steps to Take</string>
    <string name="_1_check_your_recent_transactions_to_identify_any_discrepancies_n2_verify_your_account_balance_to_ensure_accuracy_n3_have_your_account_number_ready_for_reference">1. Check your recent transactions to identify any discrepancies.\n2. Verify your account balance to ensure accuracy.\n3. Have your account number ready for reference.</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="approximately_10_minutes">Approximately 10 minutes</string>
    <string name="please_patiently_wait_and_prepare_for_a_customer_service_agent_to_accept_the_request">Please patiently wait and prepare for a customer service agent to accept the request.</string>
    <string name="preparation_details">Preparation Details</string>
    <string name="please_have_the_following_information_ready_n_your_account_number_n_recent_transactions_n_any_relevant_documents">Please have the following information ready:\n- Your account number\n- Recent transactions\n- Any relevant documents</string>
    <string name="add_files_photos">Add Files/Photos</string>
    <string name="a_support_agent_has_accepted_your_request">A support agent has accepted your request</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="this_chat_has_been_closed">This Chat has been Closed</string>
    <string name="which_account_do_you_want_to_register">Which account do you want to register?</string>
    <string name="customer">Customer</string>
    <string name="employee">Employee</string>
    <string name="helloq">Hello,</string>
    <string name="quick_nconnect">Quick \nConnect</string>
    <string name="instant_customer_service_assistance">Instant Customer Service Assistance</string>
    <string name="message_nus">Message \nUs</string>
    <string name="get_in_touch_with_out_team">Get in touch with out team</string>
    <string name="voice_video_call_">Voice/Video Call</string>
    <string name="get_in_touch_with_out_team_">Get in touch with out team</string>
    <string name="qc_nchatbot">QC\nChatBot</string>
    <string name="ai_powered_quickconnect_chatbot">AI-Powered QuickConnect Chatbot</string>
    <string name="profile_">Profile</string>
    <string name="user_profile_and_settings">User Profile and settings</string>
    <string name="reconnect_and_chat">Reconnect and Chat</string>
    <string name="reconnect_with_ease">Reconnect with Ease</string>
    <string name="profile_and_settings">Profile and Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="profile__">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="notifications__">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout_">Logout</string>
    <string name="describe_your_enquiry">Describe your enquiry</string>
    <string name="send_">Send</string>
    <string name="enter_an_enquiry_here_for_us_to_suggest_a_channel_for_you">Enter an enquiry here for us to suggest a channel for you:</string>
    <string name="or_n_choose_one_yourself">OR \n choose one yourself</string>
    <string name="create_new_chat">Create New Chat</string>
    <string name="create_a_call_request">Create a Call Request</string>
    <string name="go_to_faq">Go to FAQ</string>
    <string name="help_channels">Help Channels</string>
    <string name="enquiry_helper">Enquiry Helper</string>
    <string name="chats">Chats</string>
    <string name="call_requests">Call Requests</string>
    <string name="new_call">New Call</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Chinese</item>
        <item>Tamil</item>
        <item>Malay</item>
    </string-array>
    <string-array name="language_codes">
        <item>en</item>
        <item>zh</item>
        <item>ta</item>
        <item>ms</item>
    </string-array>
    <string-array name="department_array">
        <item>Inquiry and General Assistance</item>
        <item>Account Services</item>
        <item>Loan and Credit Services</item>
        <item>Digital Banking Support</item>
        <item>Complaint Resolution</item>
        <item>VIP and Premium Services</item>
        <item>Training and Development</item>
        <item>Multilingual and International Support</item>
        <item>Fraud Detection and Prevention</item>
    </string-array>
    <string name="default_language" translatable="false">English</string>
    <string name="quickassist">QuickAssist</string>
    <string name="profile_and_settings__">Profile and Settings</string>
    <string name="chatbot">Chatbot</string>
    <string name="voice_call">voice call</string>
    <string name="Request">Request</string>
    <string name="profile_and_settings_">Profile and Settings</string>
    <string name="address">Address</string>
    <string name="call_specialist">Call Specialist</string>
    <string name="newmessage">Messaging</string>
    <string name="message_a_support_agent">Message a Support Agent</string>
    <string name="_1_select_a_department_to_message">1. Select a department to message</string>
    <string name="_2_describe_your_issue_for_us_to_choose">2. Describe your issue for us to choose</string>
    <string name="fill_up_this_form_to_start_a_chat">Fill up this form to start a chat</string>
    <string name="contact_now">Contact now</string>
    <string name="please_select_a_call_type">Please select a call type</string>
    <string name="connect_now">Connect Now</string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="department">Department</string>
    <string name="_2_choose_the_department_you_would_like_to_contact">2. Choose the department you would like to contact</string>
    <string name="please_select_your_department">Please select your department</string>
    <string name="_3_describe_your_issue">3. Describe your issue</string>
    <string name="please_describe_your_issue">Please describe your issue</string>
    <string name="_1_choose_your_preferred_way_to_connect_with_us">1. Choose your preferred way to connect with us.</string>
    <string name="please_fill_up_the_form_to_connect_now">Please fill up the form to connect now</string>
    <string name="contact_support">Contact Support</string>
    <string name="resolved">Resolved</string>
    <string name="unresolved">Unresolved</string>
    <string name="accepted">Accepted</string>
    <string name="unaccepted">Unaccepted</string>
    <string name="resolved_">Resolved</string>
    <string name="unresolved_">Unresolved</string>
</resources>