<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Base.Theme.QuickConnect"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"
        android:textColor="@color/contentTextColor"
        >
        <item
            android:id="@+id/nav_c_home"
            android:icon="@drawable/nav_home"
            android:title="@string/Home"


            />

        <item
            android:id="@+id/nav_c_quickconnect"
            android:icon="@drawable/quick_connect"
            android:title="@string/quickconnect"
            />
        <item
            android:id="@+id/nav_c_Voice_Video_Call"
            android:icon="@drawable/call_icon_phone"
            android:title="@string/voice_video_call"/>

        <item
            android:id="@+id/nav_c_Messaging"
            android:icon="@drawable/nav_message"
            android:title="@string/messaging"/>


        <item
            android:id="@+id/nav_c_chatbot"
            android:icon="@drawable/baseline_voice_chat_24"
            android:title="@string/chatbot" />








    </group>

    <item
        android:title=""
        android:textColor="@color/contentTextColor">

        <menu>

            <item
                android:id="@+id/nav_c_profile_settings"
                android:icon="@drawable/nav_setting"
                android:title="@string/profile_and_settings__" />
            <item
                android:id="@+id/nav_c_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/Logout" />

        </menu>


    </item>



</menu>