<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_e_cc_home"
            android:icon="@drawable/nav_home"
            android:title="@string/Home"/>

        <item
            android:id="@+id/nav_e_requests"
            android:icon="@drawable/nav_about"
            android:title="@string/Request"/>
        <item
            android:id="@+id/nav_e_cc_chatbot"
            android:icon="@drawable/nav_message"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_e_cc_language"
            android:icon="@drawable/nav_language"
            android:title="@string/change_language" />




    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_e_cc_profile_settings"
                android:icon="@drawable/nav_setting"
                android:title="@string/profile_and_settings_" />
            <item
                android:id="@+id/nav_e_cc_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/Logout" />

        </menu>


    </item>



</menu>